...
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentBottom="true"
                android:importantForAccessibility="no" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_below="@id/insetTop"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
...
                android:contentDescription="@string/c_player_expand"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_sym_expand_less" />

            <ImageView
                android:id="@+id/capsuleNote"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:contentDescription="@string/c_player_expand"
                android:padding="16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_sym_music_note" />
...
