...
            <Button
                android:id="@+id/n4"
                style="@style/ButtonKB"
                android:text="@string/nn4" />

            <Button
                android:id="@+id/n1"
                style="@style/ButtonKB"
                android:text="@string/nn1" />

            <Button
                android:id="@+id/n10"
                style="@style/ButtonKB"
...
                android:id="@+id/bs_bb"
                style="@style/ButtonKB"
                android:text="@string/hymn_bb"
                android:textSize="25sp" />

            <Button
                android:id="@+id/bs_db"
                style="@style/ButtonKB"
                android:text="@string/hymn_db"
                android:textSize="25sp" />

        </LinearLayout>
    </LinearLayout>
...
