...
                            android:textAppearance="@style/TextAppearance.Hymnal.Body"
                            android:textColor="?attr/colorOnSurface" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/playback_play"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:contentDescription="@string/c_play"
                    android:padding="14dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_sym_play_arrow" />
...
