...
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/c_recent_label"
            android:textAppearance="@style/TextAppearance.Hymnal.Heading" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_recent_more"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:minHeight="48dp"
...
